flux/apps/ai/llm/catalog/lfm2-5-2-6b/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lfm2-5-2-6b-ai
spec:
  parentRefs:
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: https
  hostnames:
    - ai.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
          headers:
            - type: Exact
              name: X-Gateway-Model-Name
              value: LiquidAI/LFM2.5-2.6B
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: lfm2-5-2-6b
